修复终审报告中的P0和P1问题
- 修复 LambdaUtils 缓存驱逐逻辑缺陷，使用 LinkedHashMap 实现 LRU 缓存
- 优化 LambdaUtils 反射操作，添加 METHOD_CACHE 缓存 Method 对象
- 修复 JTA 环境检测不完整，添加 TransactionRequiredException 异常处理
- 修复 SoftDeleteContext ThreadLocal 泄漏风险，添加 reset() 方法
- 添加批量操作行数上限保护，在 MyJpaTemplate 中添加 maxBulkOperationRows 属性和 executeWithMaxRows() 方法
- 修复 SoftDeleteJpaRepository.findById 回退逻辑，移除 try-catch 回退逻辑
- 修改 rawLike() 方法，使其抛出 UnsupportedOperationException
- 添加 OrConditionBuilder 构造函数 null 校验
- 提取 AbstractBulkOperationSpec 回滚逻辑 rollbackIfActive() 私有方法
- 更新测试用例以适配 rawLike() 方法的行为变更
- 更新 spotbugs-exclude.xml 以排除 OrConditionBuilder 的 CT_CONSTRUCTOR_THROW 警告